# rest-api-test-task

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  postgres.env.example  pyproject.toml
src/rest_api_test/: __init__.py  main.py
src/rest_api_test/application/activities/: dto.py  repo.py  service.py
src/rest_api_test/application/buildings/: dto.py  repo.py  service.py
src/rest_api_test/application/data_filler/: filler.py
src/rest_api_test/application/exceptions/: app_error.py  error_types.py
src/rest_api_test/application/interfaces/common/: key_value_cache.py  uow.py
src/rest_api_test/application/organizations/: dto.py  get_organizations.py  repo.py  service.py
src/rest_api_test/application/phone_numbers/: dto.py  repo.py  service.py
src/rest_api_test/domain/activities/: model.py
src/rest_api_test/domain/buildings/: model.py
src/rest_api_test/domain/organizations/: model.py
src/rest_api_test/domain/phone_numbers/: table.py
src/rest_api_test/infrastructure/alembic/: env.py
src/rest_api_test/infrastructure/alembic/versions/: e99e1b99ef4c_init.py
src/rest_api_test/infrastructure/di/: container.py
src/rest_api_test/infrastructure/fastapi/: create_app.py  error_handler.py
src/rest_api_test/infrastructure/fastapi/dependencies/: pagination.py
src/rest_api_test/infrastructure/redis/: cache.py
src/rest_api_test/infrastructure/sqlalchemy/: __init__.py  uow.py
src/rest_api_test/utils/config/: settings.py
src/rest_api_test/utils/logging/: __init__.py  lib_log_filter.py  logger.py
(+24 files in other folders)
